add makefile target to run sequencer